Docs: update root README with AIHW calibration and AU overlays